--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -12,6 +12,11 @@
   border: 3px dotted violet;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   background-color: black;
   color: var(--white-3);
